<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">alphadrone</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_take_off">Take off</string>
    <string name="action_land">Land</string>
        
	<string name="msg_hover">Hover</string>
	<string name="msg_forward">Forward</string>
	<string name="msg_backward">Backward</string>		
	<string name="msg_up">Up</string>
	<string name="msg_down">Down</string>	
	<string name="msg_left">Left</string>
	<string name="msg_right">Right</string>	
	<string name="msg_spin">Spin</string>
	<string name="msg_move">Move</string>
	
	
</resources>
